Session creation finally works! Still a problem with the redirection to the /welcome after authentication
