# spec/swagger.json
@@ -1127,6 +1127,14 @@
         }
       }
     },
+    "/self-service/methods/saml/browser": {
+      "get": {
+        "tags": [
+          "v0alpha2"
+        ],
+        "operationId": "initializeSelfServiceSamlFlowForBrowsers"
+      }
+    },
     "/self-service/recovery": {
       "post": {
         "description": "Use this endpoint to complete a recovery flow. This endpoint\nbehaves differently for API and browser flows and has several states:\n\n`choose_method` expects `flow` (in the URL query) and `email` (in the body) to be sent\nand works with API- and Browser-initiated flows.\nFor API clients and Browser clients with HTTP Header `Accept: application/json` it either returns a HTTP 200 OK when the form is valid and HTTP 400 OK when the form is invalid.\nand a HTTP 302 Found redirect with a fresh recovery flow if the flow was otherwise invalid (e.g. expired).\nFor Browser clients without HTTP Header `Accept` or with `Accept: text/*` it returns a HTTP 302 Found redirect to the Recovery UI URL with the Recovery Flow ID appended.\n`sent_email` is the success state after `choose_method` for the `link` method and allows the user to request another recovery email. It\nworks for both API and Browser-initiated flows and returns the same responses as the flow in `choose_method` state.\n`passed_challenge` expects a `token` to be sent in the URL query and given the nature of the flow (\"sending a recovery link\")\ndoes not have any API capabilities. The server responds with a HTTP 302 Found redirect either to the Settings UI URL\n(if the link was valid) and instructs the user to update their password, or a redirect to the Recover UI URL with\na new Recovery Flow ID which contains an error message that the recovery link was invalid.\n\nMore information can be found at [Ory Kratos Account Recovery Documentation](../self-service/flows/account-recovery.mdx).",
@@ -1534,14 +1542,6 @@
             }
           }
         }
-      }
-    },
-    "/self-service/saml/browser": {
-      "get": {
-        "tags": [
-          "v0alpha2"
-        ],
-        "operationId": "initializeSelfServiceSamlFlowForBrowsers"
       }
     },
     "/self-service/settings": {
